dark mode fixes

--- a/scss/tmitg.scss
+++ b/scss/tmitg.scss
@@ -15,10 +15,11 @@ $fourgray: #444444;
 $dkgray: #333333;
 $nearblack: #222222;
 $black: #000000;
-$teal: #1579BC;
+$teal: #1579BE;
 $darkteal: #034F5F;
 $lightteal: #75BFF0;
-$darklight: #372231; /* was #60323D */
+$darklight: #372231; /* dark purple for home img */
+$lightdark: #9E6189; /* inverse for dark mode */
 
 
 @import url('https://fonts.googleapis.com/css2?family=Megrim&display=swap');
@@ -74,7 +75,7 @@ a:visited {
 	font-weight: normal;
 }
 
-a img { border:0; }
+a img { border: 1px solid transparent; }
 
 a, a img, a:hover, a:hover img {
 	@include single-transition(all, 250ms, linear, 0);
@@ -754,7 +755,7 @@ iframe#sb-player {
 		float: left;
 		text-align: left;
 
-		h4 {font-family: 'Kristi', cursive; color:$dkred; font-size:2em; font-weight:normal; margin:0.5em 0 0 0;}
+		h4 {font-family: 'Kristi', cursive; color:$darklight; font-size:2em; font-weight:normal; margin:0.5em 0 0 0;}
 	}
 	.albumcol { width: 33%; *width: 28%; min-width:250px; min-height:250px;}
 	.audiocol { width: 33%; *width: 33%; min-width:200px; }
@@ -1197,10 +1198,17 @@ s::after {
 	.mainbody {
 		background-color: $black;
 		color: $nearwhite;
-		a {color:$ltgray;}
+		a, a .icon-file-alt, .icon-file-alt {color:$ltgray;}
+		a .icon-music, .icon-music {color:$lightdark;}
+		a .icon-film, .icon-film {color:$teal;}
 	}
 	#discog thead {color:$black;}
 	#merch a.atcss {color:$nearwhite;}
+	#music {
+		#accordion {background:$black;}
+		.videocol h4 {color:$lightdark;}
+		.audiocol h4 {color:$lightdark;}
+	}
 	#live #liveTable {
 		background-color: $black;
 		border: 1px solid $nearwhite;
